--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^7.5.5",
     "crypto-js": "^4.1.1",
     "mongoose": "^6.3.6",
+    "nestjs-soap": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
