--- a/.env
+++ b/.env
@@ -1,2 +1,20 @@
-DATABASE_HOST=127.0.0.1
-DATABASE_NAME=casilla
+PORT='3035'
+
+MONGODB_WEB_HOST='192.168.48.97'
+MONGODB_WEB_USERNAME='admin'
+MONGODB_WEB_PASSWORD='admin'
+MONGODB_WEB_DATABASE='casilla'
+MONGODB_WEB_PORT='27017'
+
+URL_SUNAT='https://ws3.pide.gob.pe/Rest/Sunat/DatosPrincipales'
+URL_RENIEC='http://padronws.onpe.gob.pe:8080/ws_padron_reniec/api/padron/dni'
+CODIGO_RENIEC='jVL9c2excMCbPR6UlZCDIA=='
+CLAVE_RENIEC='FeD0Ea74o2GwGWeeO9aNl9epmhlSrxJ6rka1kG9axlg='
+
+EMAIL_HOST='192.168.48.87'
+EMAIL_PORT='25'
+EMAIL_USER='etlvdev@venp.pe'
+EMAIL_ORIGEN='etlvdev@venp.pe'
+EMAIL_PASSWORD='12345678'
+EMAIL_ANONYMOUS='true'
+EMAIL_SECURE='false'
