--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nestjs-soap": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
+    "request-ip": "^3.0.2",
     "request-promise": "^4.2.6",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -42,6 +43,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
